--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,8 +1,9 @@
 channels:
     - conda-forge
 dependencies:
+    - python=3.7.12
     - pypy
-    - jupyterlab==3.3.2
+    - jupyterlab==3.4.4
     - numpy
     - matplotlib
     - vpython==7.6.4
