--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -2,6 +2,7 @@ channels:
     - conda-forge
 dependencies:
     - python=3.7.12
+    - pypy=7.3.7
     - jupyterlab==3.4.4
     - numpy
     - matplotlib
