--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,7 +1,8 @@
 channels:
     - conda-forge
 dependencies:
-    - python=pypy
+    - python=3.7.10
+    - pypy
     - numpy
     - matplotlib
     - vpython
