--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,8 +1,8 @@
 channels:
     - conda-forge
 dependencies:
-    # - pypy=7.3.7
-    - numpy
-    - matplotlib
-    - vpython
-    - jupyterlab-vpython
+    - pypy=7.3.7
+    # - numpy
+    # - matplotlib
+    # - vpython
+    # - jupyterlab-vpython
