--- a/binder/environment-pypy.yml
+++ b/binder/environment-pypy.yml
@@ -8,5 +8,6 @@ dependencies:
     - matplotlib
     - jupyterlab==3.3.3
     - pip
-      - vpython
-      - jupyterlab-vpython
+    - pip:
+        - vpython
+        - jupyterlab-vpython 
